# immix-rust

./: Cargo.toml  README.md  build.rs
c_src/: common.h  freelist.c  freelist.h  gc.c  gc.h  gcbench.c  immix.h  immix_mutator.c  immix_space.c  main.c  objectmodel.c  objectmodel.h
rust_c_interface/: immix_rust.h  test.c
src/: exhaust.rs  gcbench.rs  lib.rs  main.rs  mark.rs  mt_gcbench.rs  mt_trace.rs  obj_init.rs  trace.rs
src/common/: address_bitmap.rs  address_map.rs  bitmap.rs  mod.rs  perf.c
src/heap/: mod.rs
src/heap/freelist/: mod.rs
src/heap/gc/: clib_x64.c  mod.rs
src/heap/immix/: immix_mutator.rs  immix_space.rs  mod.rs
src/objectmodel/: mod.rs
