[package]
name = "immix_rust"
version = "0.0.1"
authors = ["Yi Lin <yi.lin@anu.edu.au>"]
build = "build.rs"

[lib]
name = "immix_rust"
path = "src/lib.rs"
crate-type = ["dylib"]

[[bin]]
name = "immix-rust"
path = "src/main.rs"

[features]
exhaust = []
initobj = []
mt-gcbench = ["mt-trace"]
gcbench = ["mt-trace"]
mark = []
trace = []
mt-trace = []

[dependencies]
aligned_alloc = "0.1.2"
crossbeam = "0.2.8"
lazy_static = "0.1.15"
libc = "0.2.2"
log = "0.3.5"
memmap = "0.2.2"
simple_logger = "0.4.0"
time = "0.1.34"

[build-dependencies]
cc = "1"
